--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-
+    api_open_map: 'c61088b41391e802c312cd719e05150c'
+    api_weather_bit: '0186d50929ae4634a78bf08f81ab97cc'
 services:
     # default configuration for services in *this* file
     _defaults:
